# skindiff

./: .Rbuildignore  .gitignore  CLAUDE.md  CMakeLists.txt  DESCRIPTION  Makevars  NAMESPACE  README.md  compartment.cpp  compartmentlog2d.cpp  consoleprogressbar.cpp  consoleprogressbar.h  main.cpp  session.cpp  session.h  sink.cpp  systemcmd.cpp  systemcmd.h  tdmatrix.cpp  tdmatrix.h  versioninfo.cpp  versioninfo.h
R/: RcppExports.R  fit.R  fit_methods.R  metrics.R  observations.R  params.R  plot.R  simulate.R  skindiff-package.R  units.R
man/: autoplot.skin_fit.Rd  autoplot.skin_result.Rd  finite_sink.Rd  flux.Rd  layer.Rd  metrics.Rd  penetration_obs.Rd  perfect_sink.Rd  permeated.Rd  permeated_at.Rd  permeation_obs.Rd  profile_at.Rd  skin_fit.Rd  skin_params.Rd  skin_params_from_fit.Rd  skin_simulate.Rd  skin_units.Rd  skindiff-package.Rd  vehicle.Rd
research/qsar/: README.md
research/qsar/diffusion_D/: README.md  anissimov_roberts_2004.md  chen_lian_han_2010.md  hayduk_laudie_1974.md  kasting_1992_sc.md  kasting_2001_finite_dose.md  kretsos_kasting_2008_dermis.md  lian_chen_han_2008_eval.md  mitragotri_2002_sc.md  mitragotri_2003_four_pathway.md  nitsche_frasch_2011.md  nitsche_kasting_2013_corneocyte.md  nitsche_kasting_2013_ve.md  othmer_thakar_1953.md  reddy_doraiswamy_1967.md  wang_kasting_2007_dlip.md  wang_kasting_2007_ktrans.md  wilke_chang_1955.md
research/qsar/modern_and_reviews/: README.md
research/qsar/partition_K/: README.md  anderson_raykar_1989.md  cleek_bunge_1993.md  cosmomic_md_2023.md  frasch_barbero_2003.md  hansen_2011_keratin.md  hansen_lehr_schaefer_2013.md  kretsos_kasting_2008.md  logKow_predictors_overview.md  mitragotri_2003.md  nitsche_kasting_2013_VE.md  nitsche_wang_kasting_2006.md  potts_guy_1992_implied_K.md  wang_kasting_nitsche_2007.md
research/qsar/permeability_kp/: README.md  baba_2015.md  (+15 more)
scripts/: create_package.R  example.R
scripts/dskin/: DESCRIPTION  NAMESPACE
src/: Makevars.win  RcppExports.cpp  algorithms.h  compartment.h  compartmentlog2d.h  compartmentlog3d.cpp  compartmentlog3d.h  geometry.cpp  geometry.h  logger.h  matrixbuilder.cpp  matrixbuilder.h  parameter.cpp  parameter.h  rcpp_bindings.cpp  sink.h  system.cpp  system.h  tdmatrix.cpp  tdmatrix.h  test-engine.cpp  test-runner.cpp  test-tdmatrix.cpp
tests/: Tests.pro  tdmatrixtests.cpp  testthat.R  thomasalgorithmtests.cpp
tests/testthat/: helper-analytical.R  test-analytical.R  test-cpp.R  test-events.R  test-fit.R  test-metrics.R  test-observations.R  test-params.R  test-plot.R  test-realistic.R  test-simulate.R
(+78 files in other folders)
